--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.128.5",
     "grpcio>=1.78.0",
+    "grpcio-tools>=1.78.0",
     "httpx>=0.28.1",
     "sqlmodel>=0.0.32",
     "uvicorn>=0.40.0",
