feat: generate pb2 code by `python -m grpc_tools.protoc -I proto --python_out=. --grpc_python_out=. proto/hello.proto`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "grpcio>=1.78.0",
     "grpcio-tools>=1.78.0",
     "httpx>=0.28.1",
+    "protobuf>=6.33.5",
     "sqlmodel>=0.0.32",
     "uvicorn>=0.40.0",
 ]
